plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.guava
    implementation 'com.owlike:genson:1.6'
    implementation files('libs/jelib-core.jar')
    implementation files('libs/jelib-gui.jar')
    implementation files('libs/jelib-io.jar')
    testImplementation libs.junit
}

jar {
    manifest {
        attributes 'Main-Class': 'org.chatebote.App'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'org.chatebote.App'
}
